# 0.26.0

      * Fix swapping of `>>=` and `<<=` in constants.
      * Add support for #[deprecated] (#860).
      * Built-in support for bitflags 2.0.
      * Support for "C-unwind" ABI.
      * Generate bindings for non-public extern items if they are #[no_mangle].

## 0.25.0

      * Re-release of yanked 0.24.6 as a major release
      * Update MSRV to 1.57
      * Support variadic arguments (`...`) (#805)
      * Add --depfile option (#820)
      * Breaking changes: The `Config` struct now has a private member.

## 0.24.6 (YANKED: depfile option was breaking, see #841)

      * Update MSRV to 1.57
      * Support variadic arguments (`...`) (#805)
      * Add --depfile option (#820)

## 0.24.5

      * Don't enforce tempfile version.

## 0.24.4

      * Move expand infinite recursion fix (#799)
      * Add with_cpp_compat to the builder (#796)
      * Handle never type in return position consistently (#780)
      * Fix warnings (#816, #819)
      * Updated documentation (#788, #791, #792, #810, #823)

## 0.24.3

      * Make struct expressions correctly generated through typedefs (#768).

## 0.24.2

      * Make bitfield operators use explicit constructors.

## 0.24.1

      * Add support for unary negation (#765).
      * Make more bitfield operators constexpr (#765).

## 0.24.0

      * Basic const generic support (#759, #760 #762).
      * Suffixes on integer literals are now honored to avoid narrowing (#764).

## 0.23.0

      * Better support for constexpr. (#756)
      * constexpr is now enabled by default in C++ mode. You can use const.allow_constexpr=false to revert to previous behavior. (#756)
      * Minimum syn version no longer parses old rust code. (#754)

## 0.22.0

      * Support rename rule for union body members (#751).
      * constant: Add support for associated constant expressions (#752).
      * Fix regression in CamelCase rename rule (should be lowerCamelCase) (#750).
      * enumeration: simplify standard types in variants (#749).